src/enki/frontend/Enki2Parser.d
/+
	Copyright (c) 2008 Eric Anderton
	
	Permission is hereby granted, free of charge, to any person
	obtaining a copy of this software and associated documentation
	files (the "Software"), to deal in the Software without
	restriction, including without limitation the rights to use,
	copy, modify, merge, publish, distribute, sublicense, and/or
	sell copies of the Software, and to permit persons to whom the
	Software is furnished to do so, subject to the following
	conditions:
	
	The above copyright notice and this permission notice shall be
	included in all copies or substantial portions of the Software.
	
	THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
	EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
	OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
	NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
	HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
	WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
	FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
	OTHER DEALINGS IN THE SOFTWARE.

+/
module enki.frontend.Enki2Parser;
private import enki.frontend.Frontend;
private import enki.frontend.Enki2ParserBase;
private import enki.EnkiToken;
private import enki.Binding;
private import enki.Expression;
private import enki.Param;
private import enki.ProductionArg;
private import enki.Rule;
private import enki.RulePredicate;

debug import tango.io.Stdout;

class Enki2Parser:Enki2ParserBase{
	static char[] getHelp(){
		return "";
	}

	/*
	Syntax
		::= (Prototype | Alias | Rule | Directive | Attribute)* eoi;

	*/
	bool value_Syntax;
	bool parse_Syntax(){
		debug Stdout("parse_Syntax").newline;
		// Iterator
		start2:
			// (terminator)
				// Production
				if(parse_eoi()){
					goto end3;
				}
			// (expression)
			expr4:
				// OrGroup start2
					// Production
					if(parse_Prototype()){
						goto start2;
					}
				term5:
					// Production
					if(parse_Alias()){
						goto start2;
					}
				term6:
					// Production
					if(parse_Rule()){
						goto start2;
					}
				term7:
					// Production
					if(parse_Directive()){
						goto start2;
					}
				term8:
					// Production
					if(!parse_Attribute()){
						goto fail1;
					}
			goto start2;
		end3:
		// Rule
		pass0:
			debug Stdout("passed").newline;
			return true;
		fail1:
			debug Stdout.format("\tparse_Syntax failed").newline;
			return false;
	}

	/*
	Prototype
		= void addPrototype(String name,String returnType)
		::= Identifier:name "=" Identifier:returnType ";";

	*/
	bool value_Prototype;
	bool parse_Prototype(){
		debug Stdout("parse_Prototype").newline;
		String var_name;
		String var_returnType;

		// AndGroup
			auto position3 = pos;
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_name,value_Identifier);
			term5:
				// Terminal
				if(!match("=")){
					goto fail4;
				}
			term6:
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_returnType,value_Identifier);
			term7:
				// Terminal
				if(match(";")){
					goto pass0;
				}
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			addPrototype(var_name,var_returnType);
			debug Stdout("passed").newline;
			return true;
		fail1:
			debug Stdout.format("\tparse_Prototype failed").newline;
			return false;
	}

	/*
	Alias
		= void addAlias(String aliasName,String ruleName)
		::= Identifier:aliasName &TOK_RULEASSIGN Identifier:ruleName ";";

	*/
	bool value_Alias;
	bool parse_Alias(){
		debug Stdout("parse_Alias").newline;
		String var_ruleName;
		String var_aliasName;

		// AndGroup
			auto position3 = pos;
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_aliasName,value_Identifier);
			term5:
				// CustomTerminal
				if(!match(TOK_RULEASSIGN)){
					goto fail4;
				}
			term6:
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_ruleName,value_Identifier);
			term7:
				// Terminal
				if(match(";")){
					goto pass0;
				}
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			addAlias(var_aliasName,var_ruleName);
			debug Stdout("passed").newline;
			return true;
		fail1:
			debug Stdout.format("\tparse_Alias failed").newline;
			return false;
	}

	/*
	Rule
		= void addRule(String name,Param[] decl,RulePredicate pred,Param[] vars,Expression expr)
		$String err1="Missing \';\'"
		$String err2="Expected \'::=\'"
		::= Identifier:name [RuleDecl:decl] [RulePredicate:pred] ?!(err2) RuleVar:~vars* &TOK_RULEASSIGN Expression:~expr ?!(err1) ";";

	*/
	bool value_Rule;
	bool parse_Rule(){
		debug Stdout("parse_Rule").newline;
		String var_err2 = "Expected \'::=\'";
		String var_name;
		Expression var_expr;
		RulePredicate var_pred;
		Param[] var_vars;
		Param[] var_decl;
		String var_err1 = "Missing \';\'";

		// AndGroup
			auto position3 = pos;
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_name,value_Identifier);
			term5:
				// Optional
					// Production
					if(!parse_RuleDecl()){
						goto term6;
					}
					smartAssign(var_decl,value_RuleDecl);
			term6:
				// Optional
					// Production
					if(!parse_RulePredicate()){
						goto term7;
					}
					smartAssign(var_pred,value_RulePredicate);
			term7:
				// ErrorPoint
					// Iterator
					start10:
						// (terminator)
							// CustomTerminal
							if(match(TOK_RULEASSIGN)){
								goto end11;
							}
						// (expression)
						expr12:
							// Production
							if(!parse_RuleVar()){
								goto fail9;
							}
							smartAppend(var_vars,value_RuleVar);
						goto start10;
					end11:
						goto term8;
				fail9:
					error(var_err2);
					goto fail4;
			term8:
				// Production
				if(!parse_Expression()){
					goto fail4;
				}
				smartAppend(var_expr,value_OrGroup);
			term13:
				// ErrorPoint
					// Terminal
					if(match(";")){
						goto pass0;
					}
				fail14:
					error(var_err1);
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			addRule(var_name,var_decl,var_pred,var_vars,var_expr);
			debug Stdout("passed").newline;
			return true;
		fail1:
			debug Stdout.format("\tparse_Rule failed").newline;
			return false;
	}

	/*
	RuleDecl
		= Param[] params
		::= ParamsExpr:params;

	*/
	Param[] value_RuleDecl;
	bool parse_RuleDecl(){
		debug Stdout("parse_RuleDecl").newline;
		Param[] var_params;

		// Production
		if(!parse_ParamsExpr()){
			goto fail1;
		}
		smartAssign(var_params,value_ParamsExpr);
		// Rule
		pass0:
			value_RuleDecl = var_params;
			debug Stdout.format("\tparse_RuleDecl passed: {0}",value_RuleDecl).newline;
			return true;
		fail1:
			value_RuleDecl = (Param[]).init;
			debug Stdout.format("\tparse_RuleDecl failed").newline;
			return false;
	}

	/*
	RulePredicate
		= RulePredicate pred
		::= "=" (ClassPredicate:pred | FunctionPredicate:pred | BindingPredicate:pred | @err!("Expected Rule Predicate."));

	*/
	RulePredicate value_RulePredicate;
	bool parse_RulePredicate(){
		debug Stdout("parse_RulePredicate").newline;
		RulePredicate var_pred;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("=")){
					goto fail4;
				}
			term5:
				// OrGroup pass0
					// Production
					if(parse_ClassPredicate()){
						smartAssign(var_pred,value_ClassPredicate);
						goto pass0;
					}
				term6:
					// Production
					if(parse_FunctionPredicate()){
						smartAssign(var_pred,value_FunctionPredicate);
						goto pass0;
					}
				term7:
					// Production
					if(parse_BindingPredicate()){
						smartAssign(var_pred,value_BindingPredicate);
						goto pass0;
					}
				term8:
					// Literal
						err("Expected Rule Predicate.");
						goto pass0;
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			value_RulePredicate = var_pred;
			debug Stdout.format("\tparse_RulePredicate passed: {0}",value_RulePredicate).newline;
			return true;
		fail1:
			value_RulePredicate = (RulePredicate).init;
			debug Stdout.format("\tparse_RulePredicate failed").newline;
			return false;
	}

	/*
	ClassPredicate
		= new ClassPredicate(String name,Param[] params)
		::= &TOK_NEW Identifier:name ParamsExpr:params;

	*/
	ClassPredicate value_ClassPredicate;
	bool parse_ClassPredicate(){
		debug Stdout("parse_ClassPredicate").newline;
		String var_name;
		Param[] var_params;

		// AndGroup
			auto position3 = pos;
				// CustomTerminal
				if(!match(TOK_NEW)){
					goto fail4;
				}
			term5:
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_name,value_Identifier);
			term6:
				// Production
				if(parse_ParamsExpr()){
					smartAssign(var_params,value_ParamsExpr);
					goto pass0;
				}
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			value_ClassPredicate = new ClassPredicate(var_name,var_params);
			debug Stdout.format("\tparse_ClassPredicate passed: {0}",value_ClassPredicate).newline;
			return true;
		fail1:
			value_ClassPredicate = (ClassPredicate).init;
			debug Stdout.format("\tparse_ClassPredicate failed").newline;
			return false;
	}

	/*
	FunctionPredicate
		= new FunctionPredicate(Param decl,Param[] params)
		::= ExplicitParam:decl ParamsExpr:params;

	*/
	FunctionPredicate value_FunctionPredicate;
	bool parse_FunctionPredicate(){
		debug Stdout("parse_FunctionPredicate").newline;
		Param[] var_params;
		Param var_decl;

		// AndGroup
			auto position3 = pos;
				// Production
				if(!parse_ExplicitParam()){
					goto fail4;
				}
				smartAssign(var_decl,value_ExplicitParam);
			term5:
				// Production
				if(parse_ParamsExpr()){
					smartAssign(var_params,value_ParamsExpr);
					goto pass0;
				}
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			value_FunctionPredicate = new FunctionPredicate(var_decl,var_params);
			debug Stdout.format("\tparse_FunctionPredicate passed: {0}",value_FunctionPredicate).newline;
			return true;
		fail1:
			value_FunctionPredicate = (FunctionPredicate).init;
			debug Stdout.format("\tparse_FunctionPredicate failed").newline;
			return false;
	}

	/*
	BindingPredicate
		= new BindingPredicate(Param param)
		::= Param:param;

	*/
	BindingPredicate value_BindingPredicate;
	bool parse_BindingPredicate(){
		debug Stdout("parse_BindingPredicate").newline;
		Param var_param;

		// Production
		if(!parse_Param()){
			goto fail1;
		}
		smartAssign(var_param,value_Param);
		// Rule
		pass0:
			value_BindingPredicate = new BindingPredicate(var_param);
			debug Stdout.format("\tparse_BindingPredicate passed: {0}",value_BindingPredicate).newline;
			return true;
		fail1:
			value_BindingPredicate = (BindingPredicate).init;
			debug Stdout.format("\tparse_BindingPredicate failed").newline;
			return false;
	}

	/*
	RuleVar
		= Param var
		::= "$" Param:var;

	*/
	Param value_RuleVar;
	bool parse_RuleVar(){
		debug Stdout("parse_RuleVar").newline;
		Param var_var;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("$")){
					goto fail4;
				}
			term5:
				// Production
				if(parse_Param()){
					smartAssign(var_var,value_Param);
					goto pass0;
				}
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			value_RuleVar = var_var;
			debug Stdout.format("\tparse_RuleVar passed: {0}",value_RuleVar).newline;
			return true;
		fail1:
			value_RuleVar = (Param).init;
			debug Stdout.format("\tparse_RuleVar failed").newline;
			return false;
	}

	/*
	ParamsExpr
		= Param[] params
		::= "(" Param:~params* % "," ")";

	*/
	Param[] value_ParamsExpr;
	bool parse_ParamsExpr(){
		debug Stdout("parse_ParamsExpr").newline;
		Param[] var_params;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("(")){
					goto fail4;
				}
			term5:
				// Iterator
				size_t counter10 = 0;
				start6:
					// (terminator)
						// Terminal
						if(match(")")){
							goto end7;
						}
					// (delimeter)
					delim9:
					if(counter10 > 0){
						// Terminal
						if(!match(",")){
							goto fail4;
						}
					}
					// (expression)
					expr8:
						// Production
						if(!parse_Param()){
							goto fail4;
						}
						smartAppend(var_params,value_Param);
					increment11:
					// (increment expr count)
						counter10 ++;
					goto start6;
				end7:
					goto pass0;
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			value_ParamsExpr = var_params;
			debug Stdout.format("\tparse_ParamsExpr passed: {0}",value_ParamsExpr).newline;
			return true;
		fail1:
			value_ParamsExpr = (Param[]).init;
			debug Stdout.format("\tparse_ParamsExpr failed").newline;
			return false;
	}

	/*
	Param
		= Param param
		::= ExplicitParam:param | WeakParam:param;

	*/
	Param value_Param;
	bool parse_Param(){
		debug Stdout("parse_Param").newline;
		Param var_param;

		// OrGroup pass0
			// Production
			if(parse_ExplicitParam()){
				smartAssign(var_param,value_ExplicitParam);
				goto pass0;
			}
		term2:
			// Production
			if(!parse_WeakParam()){
				goto fail1;
			}
			smartAssign(var_param,value_WeakParam);
		// Rule
		pass0:
			value_Param = var_param;
			debug Stdout.format("\tparse_Param passed: {0}",value_Param).newline;
			return true;
		fail1:
			value_Param = (Param).init;
			debug Stdout.format("\tparse_Param failed").newline;
			return false;
	}

	/*
	WeakParam
		= new Param(String type,String name,String value)
		::= Identifier:name ["=" &TOK_STRING:value];

	*/
	Param value_WeakParam;
	bool parse_WeakParam(){
		debug Stdout("parse_WeakParam").newline;
		String var_value;
		String var_name;
		String var_type;

		// AndGroup
			auto position3 = pos;
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_name,value_Identifier);
			term5:
				// Optional
					// AndGroup
						auto position7 = pos;
							// Terminal
							if(!match("=")){
								goto fail8;
							}
						term9:
							// CustomTerminal
							if(match(TOK_STRING)){
								smartAssign(var_value,__match);
								goto pass0;
							}
						fail8:
						pos = position7;
					goto pass0;
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			value_WeakParam = new Param(var_type,var_name,var_value);
			debug Stdout.format("\tparse_WeakParam passed: {0}",value_WeakParam).newline;
			return true;
		fail1:
			value_WeakParam = (Param).init;
			debug Stdout.format("\tparse_WeakParam failed").newline;
			return false;
	}

	/*
	ExplicitParam
		= new Param(String type,String name,String value)
		::= ParamType:type Identifier:name ["=" &TOK_STRING:value];

	*/
	Param value_ExplicitParam;
	bool parse_ExplicitParam(){
		debug Stdout("parse_ExplicitParam").newline;
		String var_value;
		String var_name;
		String var_type;

		// AndGroup
			auto position3 = pos;
				// Production
				auto position6 = pos;
				if(!parse_ParamType()){
					goto fail4;
				}
				smartAssign(var_type,slice(position6,pos));
			term5:
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_name,value_Identifier);
			term7:
				// Optional
					// AndGroup
						auto position9 = pos;
							// Terminal
							if(!match("=")){
								goto fail10;
							}
						term11:
							// CustomTerminal
							if(match(TOK_STRING)){
								smartAssign(var_value,__match);
								goto pass0;
							}
						fail10:
						pos = position9;
					goto pass0;
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			value_ExplicitParam = new Param(var_type,var_name,var_value);
			debug Stdout.format("\tparse_ExplicitParam passed: {0}",value_ExplicitParam).newline;
			return true;
		fail1:
			value_ExplicitParam = (Param).init;
			debug Stdout.format("\tparse_ExplicitParam failed").newline;
			return false;
	}

	/*
	ParamType
		::= Identifier ["[" [ParamType] "]"];

	*/
	bool value_ParamType;
	bool parse_ParamType(){
		debug Stdout("parse_ParamType").newline;
		// AndGroup
			auto position3 = pos;
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
			term5:
				// Optional
					// AndGroup
						auto position7 = pos;
							// Terminal
							if(!match("[")){
								goto fail8;
							}
						term9:
							// Optional
								// Production
								if(!parse_ParamType()){
									goto term10;
								}
						term10:
							// Terminal
							if(match("]")){
								goto pass0;
							}
						fail8:
						pos = position7;
					goto pass0;
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			debug Stdout("passed").newline;
			return true;
		fail1:
			debug Stdout.format("\tparse_ParamType failed").newline;
			return false;
	}
	alias parse_OrGroup parse_Expression;

	/*
	OrGroup
		= new OrGroup(Expression[] exprs)
		::= {AndGroup:~exprs} % "|";

	*/
	OrGroup value_OrGroup;
	bool parse_OrGroup(){
		debug Stdout("parse_OrGroup").newline;
		Expression[] var_exprs;

		// Iterator
		size_t counter6 = 0;
		start2:
			// (terminator)
			if(!hasMore()){
				goto end3;
			}
			// (delimeter)
			delim5:
			if(counter6 > 0){
				// Terminal
				if(!match("|")){
					goto end3;
				}
			}
			// (expression)
			expr4:
				// Production
				if(!parse_AndGroup()){
					goto end3;
				}
				smartAppend(var_exprs,value_AndGroup);
			increment7:
			// (increment expr count)
				counter6 ++;
			goto start2;
		end3:
			// (range test)
				if(!((counter6 >= 1))){
					goto fail1;
				}
		// Rule
		pass0:
			value_OrGroup = new OrGroup(var_exprs);
			debug Stdout.format("\tparse_OrGroup passed: {0}",value_OrGroup).newline;
			return true;
		fail1:
			value_OrGroup = (OrGroup).init;
			debug Stdout.format("\tparse_OrGroup failed").newline;
			return false;
	}

	/*
	AndGroup
		= new AndGroup(Expression[] exprs)
		::= {SubExpression:~exprs};

	*/
	AndGroup value_AndGroup;
	bool parse_AndGroup(){
		debug Stdout("parse_AndGroup").newline;
		Expression[] var_exprs;

		// Iterator
		size_t counter5 = 0;
		start2:
			// (terminator)
			if(!hasMore()){
				goto end3;
			}
			// (expression)
			expr4:
				// Production
				if(!parse_SubExpression()){
					goto end3;
				}
				smartAppend(var_exprs,value_SubExpression);
			increment6:
			// (increment expr count)
				counter5 ++;
			goto start2;
		end3:
			// (range test)
				if(!((counter5 >= 1))){
					goto fail1;
				}
		// Rule
		pass0:
			value_AndGroup = new AndGroup(var_exprs);
			debug Stdout.format("\tparse_AndGroup passed: {0}",value_AndGroup).newline;
			return true;
		fail1:
			value_AndGroup = (AndGroup).init;
			debug Stdout.format("\tparse_AndGroup failed").newline;
			return false;
	}

	/*
	SubExpression
		= Expression expr
		::= (Production:expr | Substitution:expr | Terminal:expr | CharacterRange:expr | Regexp:expr | GroupExpr:expr | OneOrMoreExpr:expr | OptionalExpr:expr | NegateExpr:expr | TestExpr:expr | LiteralExpr:expr | CustomTerminal:expr | ErrorPoint:expr) [IteratorExpr!(expr):expr];

	*/
	Expression value_SubExpression;
	bool parse_SubExpression(){
		debug Stdout("parse_SubExpression").newline;
		Expression var_expr;

		// AndGroup
			auto position3 = pos;
				// OrGroup term5
					// Production
					if(parse_Production()){
						smartAssign(var_expr,value_Production);
						goto term5;
					}
				term6:
					// Production
					if(parse_Substitution()){
						smartAssign(var_expr,value_Substitution);
						goto term5;
					}
				term7:
					// Production
					if(parse_Terminal()){
						smartAssign(var_expr,value_Terminal);
						goto term5;
					}
				term8:
					// Production
					if(parse_CharacterRange()){
						smartAssign(var_expr,value_CharacterRange);
						goto term5;
					}
				term9:
					// Production
					if(parse_Regexp()){
						smartAssign(var_expr,value_Regexp);
						goto term5;
					}
				term10:
					// Production
					if(parse_GroupExpr()){
						smartAssign(var_expr,value_GroupExpr);
						goto term5;
					}
				term11:
					// Production
					if(parse_OneOrMoreExpr()){
						smartAssign(var_expr,value_OneOrMoreExpr);
						goto term5;
					}
				term12:
					// Production
					if(parse_OptionalExpr()){
						smartAssign(var_expr,value_OptionalExpr);
						goto term5;
					}
				term13:
					// Production
					if(parse_NegateExpr()){
						smartAssign(var_expr,value_NegateExpr);
						goto term5;
					}
				term14:
					// Production
					if(parse_TestExpr()){
						smartAssign(var_expr,value_TestExpr);
						goto term5;
					}
				term15:
					// Production
					if(parse_LiteralExpr()){
						smartAssign(var_expr,value_LiteralExpr);
						goto term5;
					}
				term16:
					// Production
					if(parse_CustomTerminal()){
						smartAssign(var_expr,value_CustomTerminal);
						goto term5;
					}
				term17:
					// Production
					if(!parse_ErrorPoint()){
						goto fail4;
					}
					smartAssign(var_expr,value_ErrorPoint);
			term5:
				// Optional
					// Production
					if(parse_IteratorExpr(var_expr)){
						smartAssign(var_expr,value_IteratorExpr);
						goto pass0;
					}
					goto pass0;
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			value_SubExpression = var_expr;
			debug Stdout.format("\tparse_SubExpression passed: {0}",value_SubExpression).newline;
			return true;
		fail1:
			value_SubExpression = (Expression).init;
			debug Stdout.format("\tparse_SubExpression failed").newline;
			return false;
	}

	/*
	Production
		= new Production(String name,Binding binding,ProductionArg[] args)
		::= Identifier:name ["!" "(" ProductionArg:~args* % "," ")"] [Binding:binding];

	*/
	Production value_Production;
	bool parse_Production(){
		debug Stdout("parse_Production").newline;
		String var_name;
		Binding var_binding;
		ProductionArg[] var_args;

		// AndGroup
			auto position3 = pos;
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_name,value_Identifier);
			term5:
				// Optional
					// AndGroup
						auto position8 = pos;
							// Terminal
							if(!match("!")){
								goto fail9;
							}
						term10:
							// Terminal
							if(!match("(")){
								goto fail9;
							}
						term11:
							// Iterator
							size_t counter16 = 0;
							start12:
								// (terminator)
									// Terminal
									if(match(")")){
										goto end13;
									}
								// (delimeter)
								delim15:
								if(counter16 > 0){
									// Terminal
									if(!match(",")){
										goto fail9;
									}
								}
								// (expression)
								expr14:
									// Production
									if(!parse_ProductionArg()){
										goto fail9;
									}
									smartAppend(var_args,value_ProductionArg);
								increment17:
								// (increment expr count)
									counter16 ++;
								goto start12;
							end13:
								goto term6;
						fail9:
						pos = position8;
						goto term6;
			term6:
				// Optional
					// Production
					if(parse_Binding()){
						smartAssign(var_binding,value_Binding);
						goto pass0;
					}
					goto pass0;
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			value_Production = new Production(var_name,var_binding,var_args);
			debug Stdout.format("\tparse_Production passed: {0}",value_Production).newline;
			return true;
		fail1:
			value_Production = (Production).init;
			debug Stdout.format("\tparse_Production failed").newline;
			return false;
	}

	/*
	ProductionArg
		= ProductionArg arg
		::= StringProductionArg:arg | BindingProductionArg:arg;

	*/
	ProductionArg value_ProductionArg;
	bool parse_ProductionArg(){
		debug Stdout("parse_ProductionArg").newline;
		ProductionArg var_arg;

		// OrGroup pass0
			// Production
			if(parse_StringProductionArg()){
				smartAssign(var_arg,value_StringProductionArg);
				goto pass0;
			}
		term2:
			// Production
			if(!parse_BindingProductionArg()){
				goto fail1;
			}
			smartAssign(var_arg,value_BindingProductionArg);
		// Rule
		pass0:
			value_ProductionArg = var_arg;
			debug Stdout.format("\tparse_ProductionArg passed: {0}",value_ProductionArg).newline;
			return true;
		fail1:
			value_ProductionArg = (ProductionArg).init;
			debug Stdout.format("\tparse_ProductionArg failed").newline;
			return false;
	}

	/*
	StringProductionArg
		= new StringProductionArg(String value)
		::= &TOK_STRING:value;

	*/
	StringProductionArg value_StringProductionArg;
	bool parse_StringProductionArg(){
		debug Stdout("parse_StringProductionArg").newline;
		String var_value;

		// CustomTerminal
		if(!match(TOK_STRING)){
			goto fail1;
		}
